@@ -70,7 +70,7 @@
     </scm>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
@@ -96,8 +96,9 @@
         <errorprone.version>2.35.1</errorprone.version>
         <fastutil.version>8.5.4</fastutil.version>
         <guava.version>32.0.1-jre</guava.version>
-        <!-- Need Guice 4.2.2 for Java 11 support: https://github.com/google/guice/wiki/Guice422#changes-since-guice-421 -->
-        <guice.version>4.2.2</guice.version>
+        <!-- Need Guice 5.1.0 for Java 17 support: https://github.com/google/guice/wiki/Guice510 -->
+        <guice.version>5.1.0</guice.version>
+        <guice-multibindings.version>4.2.2</guice-multibindings.version>
         <hamcrest.version>1.3</hamcrest.version>
         <jetty.version>9.4.54.v20240208</jetty.version>
         <jersey.version>1.19.4</jersey.version>
@@ -579,7 +580,7 @@
             <dependency>
                 <groupId>com.google.inject.extensions</groupId>
                 <artifactId>guice-multibindings</artifactId>
-                <version>${guice.version}</version>
+                <version>${guice-multibindings.version}</version>
             </dependency>
             <dependency>
               <groupId>com.google.inject.extensions</groupId>
@@ -2055,9 +2056,11 @@
                                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
                                 <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                                 <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-                              </compilerArgs>
+                                <arg>-J--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
+                            </compilerArgs>
                               <annotationProcessorPaths>
                                 <path>
                                   <groupId>com.google.errorprone</groupId>
